--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     2017 - 2018
                                 </div>
                             </div> <!-- end job-title-container -->
-                            <p>Educhat is a social chat application that matches between Israeli students in order to study together to the Israeli matriculation exam. </p>
+                            <p>Educhat is a chat platform that matches between Israeli students in order to study together to the Israeli matriculation exam. </p>
                             <p>In the process i built native Android app and deployed Nodejs server to Heroku + Amazon EC2.</p>
                         </div>
                     </div> <!-- end job -->
@@ -95,7 +95,6 @@
                             </div>
                         </div> <!-- end job-title-container -->
                     </div> <!-- end job -->
-                </div>
             </section>
 
             <section>
@@ -103,7 +102,7 @@
                 <div>
                     <div class="skills-container">
                         <ul>
-                            <li>Javascript (Vuejs+Nodejs)</li>
+                            <li>Javascript (Nodejs + Vuejs)</li>
                             <li>Python3</li>
                             <li>HTML5/CSS3</li>
                             <li>Java</li>
@@ -125,6 +124,8 @@
                     </div> <!-- end job-title-container -->
                 </div>
             </section>
+
+            
         <!--
             <section>
                 <div class="section-title">Interest</div>
@@ -136,8 +137,7 @@
                 </div>
             </section>
         -->
-            <div class="copyright">&copy; This resume was written purely using HTML5/CSS3 technologys. Copyright reserved to Ilan Ben Yona. </footer>
-
+            <p class="copyright">&copy; This resume was written using HTML5/CSS3 technologys. Copyright reserved to Ilan Ben Yona.</p>
         </div>
     </body>
 
